[package]
name = "highlight-ez"
version = "0.2.3"
edition = "2021"
description = "Easy Syntax Highlighting with HTML output"
repository = "https://github.com/Mordanis/highlight-ez"
readme = "README.md"
categories = ["graphics"]
keywords = ["graphics", "html", "highlight"]
license = "MIT-0"


[workspace.package]
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.81"
tree-sitter = "0.22.2"
tree-sitter-cli = "0.22.2"
tree-sitter-highlight = "0.22.2"
tree-sitter-loader = "0.22.2"
tree-sitter-config = "0.22.2"
git2 = "0.18.3"
thiserror = "1.0.58"
log = "0.4.21"

[build-dependencies]
cc="1.0.90"
